# transcribe-skill

./: README.md
skills/transcribe/: .env.example  .gitignore  SKILL.md  pyproject.toml
skills/transcribe/config/: auxiliary.local.example.toml  funasr.local.example.toml  funasr.toml  models.toml  transcribe.toml
skills/transcribe/references/: agent-step3-adjudication-contract.md  grok-feedback-step3-gap-fill-round2-20260430.md  grok-feedback-step3-gap-fill-round2-20260430.response.json  grok-feedback-step3-gap-fill-round2-20260430.response.md  grok-feedback-step3-gap-fill-round3-20260430.md  grok-feedback-step3-gap-fill-round3-20260430.response.json  grok-feedback-step3-gap-fill-round3-20260430.response.md  grok-feedback-step3-next-steps-20260428.md  grok-feedback-step3-next-steps-20260428.response.json  grok-feedback-step3-next-steps-20260428.response.md  grok-feedback-step3-resegmentation-20260501.md  grok-feedback-step3-resegmentation-20260501.response.md  grok-feedback-step3-resegmentation-round2-20260501.md  grok-feedback-step3-resegmentation-round2-20260501.response.md  grok-feedback-subtitle-segmentation-20260428.md  grok-feedback-subtitle-segmentation-20260428.response.json  grok-feedback-subtitle-segmentation-20260428.response.md  grok-feedback-subtitle-timing-and-first-char-20260428.md  grok-feedback-subtitle-timing-and-first-char-20260428.response.json  grok-feedback-subtitle-timing-and-first-char-20260428.response.md  human-subtitle-standard-realignment-plan.md  hybrid-architecture-draft.md  hybrid-implementation-plan.md  implementation-plan.md  (+3 more)
(+49 files in other folders)
